expandedabout me, added hobbies section and columns into that section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     
     <h1 class="important">Mauro Rosales Jr</h1>
-    <img src="img/me.jpeg" alt="A photo of Mauro Rosales Jr.">
+    <img src="img/IMG_3821.jpg" alt="A photo of Mauro Rosales Jr.">
     <h2>About me:</h2>
     <div class="sidebar">
       <h3>Useful links</h3>
@@ -16,8 +16,25 @@
           <li>Creative Works</li>
         </ul>
     </div>
-    <p>Hi! My name is Mauro Rosales Jr. I am presently enrolled in the part-time full stack at <a href="https://www.epicodus.com/">Epicodus</a>. I am very excited to further my knowledge and have the oppertunity to start a new career.
+    <p>Hi! My name is Mauro Rosales Jr. I am presently enrolled in the part-time full stack at <a href="https://www.epicodus.com/">Epicodus</a>. I am very excited to further my knowledge and have the oppertunity to start a new career in the tech industry. I am a happily married father of 3, two human and one dog, with the hopes to give my family a leg up in life.
     </p>
+
+    <h2>Hobbies!</h2>
+    <p>Here are three of my favorite hobbies, that will give you an idea as to why I feel I am a great candidate.</p>
+      <ol>
+        <li>Hanging out with my family.</li>
+        <li>Baking</li>
+        <li>Rocket League</li>
+      </ol>
+      <div class="column">
+        <h4>Hanging out with my family.</h4>
+        <p>My family give me the drive and passion to be better. My biggest goal in life is to create something that they will be proud of.</p>
+      </div>
+      <div class="column">
+        <h4>Baking!</h4>
+        <p>I've been cooking most of my life. First as a necessity, then eventually as a short loved career. In that time i was a production baker and cake decorator, which expanded my love for the art. With that knowledge and passion ingrained into my soul i understand the importance of time.</p>
+      </div>
+
    
 
 
