--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <h4>Baking!</h4>
         <p>I've been cooking most of my life. First as a necessity, then eventually as a short loved career. In that time i was a production baker and cake decorator, which expanded my love for the art. With that knowledge and passion ingrained into my soul i understand the importance of time.</p>
       </div>
+      <div class="column">
+        <h4>Rocket League!</h4>
+        <p>I've been playing Rocket League for years with some former roomates, turned best friends. We are pretty ok, depending on the game type, with our ranks fluctuating between mid gold to high diamond. One thing we do really well, as a team, is communication. Communication is key when we are making the late season push for diamond or grand champ rewards. The biggest life lesson i can take away from the game is teamwork, and working well with a team by communicating well.</p>
+      </div>
 
    
 
