added picutres to go with hobby columns and their css rules

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     
     <h1 class="important">Mauro Rosales Jr</h1>
-    <img src="img/IMG_3821.jpg" alt="A photo of Mauro Rosales Jr.">
+    <img src="img/IMG_3821.jpg" alt="A photo of Mauro Rosales Jr." class="img">
     <h2>About me:</h2>
     <div class="sidebar">
       <h3>Useful links</h3>
@@ -16,6 +16,7 @@
           <li>Creative Works</li>
         </ul>
     </div>
+    <div class="eightyfive">
     <p>Hi! My name is Mauro Rosales Jr. I am presently enrolled in the part-time full stack at <a href="https://www.epicodus.com/">Epicodus</a>. I am very excited to further my knowledge and have the oppertunity to start a new career in the tech industry. I am a happily married father of 3, two human and one dog, with the hopes to give my family a leg up in life.
     </p>
 
@@ -28,15 +29,19 @@
       </ol>
       <div class="column">
         <h4>Hanging out with my family.</h4>
+        <img src="img/mykids.jpeg" alt="a picture of my kids playing in the yard">
         <p>My family give me the drive and passion to be better. My biggest goal in life is to create something that they will be proud of.</p>
       </div>
       <div class="column">
         <h4>Baking!</h4>
+        <img src="img/orengecardimum.jpeg" alt="picture of an orenge cardimum bun">
         <p>I've been cooking most of my life. First as a necessity, then eventually as a short loved career. In that time i was a production baker and cake decorator, which expanded my love for the art. With that knowledge and passion ingrained into my soul i understand the importance of time.</p>
       </div>
       <div class="column">
         <h4>Rocket League!</h4>
+        <img src="img/rocketleague.jpeg" alt="image of the video game Rocket League">
         <p>I've been playing Rocket League for years with some former roomates, turned best friends. We are pretty ok, depending on the game type, with our ranks fluctuating between mid gold to high diamond. One thing we do really well, as a team, is communication. Communication is key when we are making the late season push for diamond or grand champ rewards. The biggest life lesson i can take away from the game is teamwork, and working well with a team by communicating well.</p>
+      </div>
       </div>
 
    
