added links to school projects in sidebar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <h3>Useful links</h3>
         <ul>
           <li>School Projects</li>
+            <ul>
+              <li><a href="https://github.com/maurorosalesjr/beach-resort">beach resort</a></li>
+              <li><a href="https://github.com/maurorosalesjr/animal-shelter">Animal sheler</a></li>
+            </ul>
           <li>Creative Works</li>
         </ul>
     </div>
