--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
               <li><a href="https://github.com/maurorosalesjr/animal-shelter">Animal sheler</a></li>
             </ul>
           <li>Creative Works</li>
+            <ul>
+              <li><a href="creative-works.html">Click here to check out some of my creative works</a></li>
+            </ul>
         </ul>
     </div>
     <div class="eightyfive">
@@ -33,18 +36,18 @@
         </ol>
         <div class="column">
           <h4>Hanging out with my family.</h4>
-          <img src="img/mykids.jpeg" alt="a picture of my kids playing in the yard">
-          <p>My family give me the drive and passion to be better. My biggest goal in life is to create something that they will be proud of.</p>
+            <img src="img/mykids.jpeg" alt="a picture of my kids playing in the yard">
+            <p>My family give me the drive and passion to be better. My biggest goal in life is to create something that they will be proud of.</p>
         </div>
         <div class="column">
           <h4>Baking!</h4>
-          <img src="img/orengecardimum.jpeg" alt="picture of an orenge cardimum bun">
-          <p>I've been cooking most of my life. First as a necessity, then eventually as a short loved career. In that time i was a production baker and cake decorator, which expanded my love for the art. With that knowledge and passion ingrained into my soul i understand the importance of time.</p>
+            <img src="img/orengecardimum.jpeg" alt="picture of an orenge cardimum bun">
+            <p>I've been cooking most of my life. First as a necessity, then eventually as a short loved career. In that time i was a production baker and cake decorator, which expanded my love for the art. With that knowledge and passion ingrained into my soul i understand the importance of time.</p>
         </div>
         <div class="column">
           <h4>Rocket League!</h4>
-          <img src="img/rocketleague.jpeg" alt="image of the video game Rocket League">
-          <p>I've been playing Rocket League for years with some former roomates, turned best friends. We are pretty ok, depending on the game type, with our ranks fluctuating between mid gold to high diamond. One thing we do really well, as a team, is communication. Communication is key when we are making the late season push for diamond or grand champ rewards. The biggest life lesson i can take away from the game is teamwork, and working well with a team by communicating well.</p>
+            <img src="img/rocketleague.jpeg" alt="image of the video game Rocket League">
+            <p>I've been playing Rocket League for years with some former roomates, turned best friends. We are pretty ok, depending on the game type, with our ranks fluctuating between mid gold to high diamond. One thing we do really well, as a team, is communication. Communication is key when we are making the late season push for diamond or grand champ rewards. The biggest life lesson i can take away from the game is teamwork, and working well with a team by communicating well.</p>
         </div>
       </div>
 
