added photo to creative works page, span to both pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="column">
           <h4>Rocket League!</h4>
             <img src="img/rocketleague.jpeg" alt="image of the video game Rocket League">
-            <p>I've been playing Rocket League for years with some former roomates, turned best friends. We are pretty ok, depending on the game type, with our ranks fluctuating between mid gold to high diamond. One thing we do really well, as a team, is communication. Communication is key when we are making the late season push for diamond or grand champ rewards. The biggest life lesson i can take away from the game is teamwork, and working well with a team by communicating well.</p>
+            <p>I've been playing Rocket League for years with some former roomates, turned best friends. We are pretty ok, depending on the game type, with our ranks fluctuating between mid gold to high diamond. One thing we do really well, as a team, is communication. <span class="important">Communication</span> is key when we are making the late season push for diamond or grand champ rewards. The biggest life lesson i can take away from the game is teamwork, and working well with a team by communicating well.</p>
         </div>
       </div>
 
