added remaining phtots and screenshots to creative works page, marking start of day

--- a/creative-works.html
+++ b/creative-works.html
@@ -7,7 +7,10 @@
   <body>
     <h1>Here is a <span class="important">random sample</span> of the things I've created</h1>
     <img src="img/bak3dtofu.jpeg" alt="the gaming avatar i use online">
-    
+    <img src="img/kidbattle2.jpeg" alt="screenshot of a two kids cinamatically battling">
+    <img src="img/savethedate.JPEG" alt="a photo of my save the date">
+
+
 
 
   </body>
