added columns, p and em tags to creative works page

--- a/creative-works.html
+++ b/creative-works.html
@@ -6,9 +6,18 @@
   </head>
   <body>
     <h1>Here is a <span class="important">random sample</span> of the things I've created</h1>
-    <img src="img/bak3dtofu.jpeg" alt="the gaming avatar i use online">
-    <img src="img/kidbattle2.jpeg" alt="screenshot of a two kids cinamatically battling">
-    <img src="img/savethedate.JPEG" alt="a photo of my save the date">
+    <div class="column">
+      <img src="img/bak3dtofu.jpeg" alt="the gaming avatar i use online">
+      <p>I created my gaming avatar using <em>Aseprite</em> and <em>Dafont.com</em></p>
+    </div>
+    <div class="column">
+      <img src="img/kidbattle2.jpeg" alt="screenshot of a two kids cinamatically battling">
+      <p>this is a screen shot of a video i made for my stepdad's birthday. My kids fought in front of a green screen and was edited using <em>PowerDirector</em></p>
+    </div>
+    <div class="column">
+      <img src="img/savethedate.JPEG" alt="a photo of my save the date">
+      <p>This is a <em>photoshopped</em> image of me and my now wife walking through the woods, used for our Save The Date.</p>
+    </div>
 
 
 
