added border style to columns in index and creative works page

--- a/creative-works.html
+++ b/creative-works.html
@@ -5,22 +5,26 @@
     <title>Creative Works</title>
   </head>
   <body>
+    
     <h1>Here is a <span class="important">random sample</span> of the things I've created</h1>
     <div class="column">
       <img src="img/bak3dtofu.jpeg" alt="the gaming avatar i use online">
-      <p>I created my gaming avatar using <em>Aseprite</em> and <em>Dafont.com</em></p>
+      <div Class="background">
+        <p>I created my gaming avatar using <em>Aseprite</em> and <em>Dafont.com</em></p>
+      </div>
     </div>
     <div class="column">
       <img src="img/kidbattle2.jpeg" alt="screenshot of a two kids cinamatically battling">
-      <p>this is a screen shot of a video i made for my stepdad's birthday. My kids fought in front of a green screen and was edited using <em>PowerDirector</em></p>
+      <div Class="background">
+        <p>this is a screen shot of a video i made for my stepdad's birthday. My kids fought in front of a green screen and was edited using <em>PowerDirector</em></p>
+      </div>
     </div>
     <div class="column">
       <img src="img/savethedate.JPEG" alt="a photo of my save the date">
-      <p>This is a <em>photoshopped</em> image of me and my now wife walking through the woods, used for our Save The Date.</p>
+      <div Class="background">  
+        <p>This is a <em>photoshopped</em> image of me and my now wife walking through the woods, used for our Save The Date.</p>
+      </div>
     </div>
-
-
-
-
+    
   </body>
 </html>
