add tracking to README

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </div>
     <div class="eightyfive">
-      <p>Hi! My name is Mauro Rosales Jr. I am presently enrolled in the part-time full stack at <a href="https://www.epicodus.com/">Epicodus</a>. I am very excited to further my knowledge and have the oppertunity to start a new career in the tech industry. I am a happily married father of 3, two human and one dog, with the hopes to give my family a leg up in life.
+      <p>Hi! My name is <strong>Mauro Rosales Jr.</strong> I am presently enrolled in the part-time full stack at <a href="https://www.epicodus.com/">Epicodus</a>. I am very excited to further my knowledge and have the oppertunity to start a new career in the tech industry. I am a happily married father of 3, two human and one dog, with the hopes to give my family a leg up in life.
       </p>
     <h2>Hobbies!</h2>
       <p>Here are three of my favorite hobbies, that will give you an idea as to why I feel I am a great candidate.</p>
